Kaggle Notebook | mcts-catboost | Version 32

--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b73773fc",
+   "id": "f7d4b91a",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:49:15.449369Z",
-     "iopub.status.busy": "2024-11-29T06:49:15.448955Z",
-     "iopub.status.idle": "2024-11-29T06:49:20.178473Z",
-     "shell.execute_reply": "2024-11-29T06:49:20.177218Z"
+     "iopub.execute_input": "2024-11-30T19:39:11.578069Z",
+     "iopub.status.busy": "2024-11-30T19:39:11.577712Z",
+     "iopub.status.idle": "2024-11-30T19:39:14.904312Z",
+     "shell.execute_reply": "2024-11-30T19:39:14.903426Z"
     },
     "papermill": {
-     "duration": 4.737356,
-     "end_time": "2024-11-29T06:49:20.181509",
+     "duration": 3.33365,
+     "end_time": "2024-11-30T19:39:14.906751",
      "exception": false,
-     "start_time": "2024-11-29T06:49:15.444153",
+     "start_time": "2024-11-30T19:39:11.573101",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b83930c6",
+   "id": "20f2ce08",
    "metadata": {
     "papermill": {
-     "duration": 0.002438,
-     "end_time": "2024-11-29T06:49:20.187086",
+     "duration": 0.002391,
+     "end_time": "2024-11-30T19:39:14.912189",
      "exception": false,
-     "start_time": "2024-11-29T06:49:20.184648",
+     "start_time": "2024-11-30T19:39:14.909798",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8cd8c06",
+   "id": "e56dae50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:49:20.194485Z",
-     "iopub.status.busy": "2024-11-29T06:49:20.193955Z",
-     "iopub.status.idle": "2024-11-29T06:49:25.596037Z",
-     "shell.execute_reply": "2024-11-29T06:49:25.595074Z"
+     "iopub.execute_input": "2024-11-30T19:39:14.918348Z",
+     "iopub.status.busy": "2024-11-30T19:39:14.917886Z",
+     "iopub.status.idle": "2024-11-30T19:39:25.246970Z",
+     "shell.execute_reply": "2024-11-30T19:39:25.245980Z"
     },
     "papermill": {
-     "duration": 5.409744,
-     "end_time": "2024-11-29T06:49:25.599440",
+     "duration": 10.334749,
+     "end_time": "2024-11-30T19:39:25.249268",
      "exception": false,
-     "start_time": "2024-11-29T06:49:20.189696",
+     "start_time": "2024-11-30T19:39:14.914519",
      "status": "completed"
     },
     "tags": []
@@ -116,7 +116,16 @@
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv23.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv34.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_text_predict_uni90.pkl'\n",
-    "catboost_artifacts_path = '//kaggle/input/mcts-artifacts/catboost_predict_int95.pkl'\n",
+    "# catboost_artifacts_path = '//kaggle/input/mcts-artifacts/catboost_predict_int95.pkl'\n",
+    "\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_int97.pkl'\n",
+    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_int99.pkl'\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_uni80.pkl'\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -128,19 +137,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "04ac0e10",
+   "id": "2a18a6c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:49:25.608490Z",
-     "iopub.status.busy": "2024-11-29T06:49:25.608125Z",
-     "iopub.status.idle": "2024-11-29T06:49:25.621308Z",
-     "shell.execute_reply": "2024-11-29T06:49:25.619996Z"
+     "iopub.execute_input": "2024-11-30T19:39:25.256542Z",
+     "iopub.status.busy": "2024-11-30T19:39:25.256145Z",
+     "iopub.status.idle": "2024-11-30T19:39:25.267583Z",
+     "shell.execute_reply": "2024-11-30T19:39:25.266435Z"
     },
     "papermill": {
-     "duration": 0.019579,
-     "end_time": "2024-11-29T06:49:25.623663",
+     "duration": 0.01765,
+     "end_time": "2024-11-30T19:39:25.269688",
      "exception": false,
-     "start_time": "2024-11-29T06:49:25.604084",
+     "start_time": "2024-11-30T19:39:25.252038",
      "status": "completed"
     },
     "tags": []
@@ -150,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 207\n",
-      "len(categorical_cols): 6\n"
+      "len(numerical_cols): 360\n",
+      "len(categorical_cols): 8\n"
      ]
     }
    ],
@@ -253,19 +262,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "147f71c6",
+   "id": "0684b269",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:49:25.631234Z",
-     "iopub.status.busy": "2024-11-29T06:49:25.630835Z",
-     "iopub.status.idle": "2024-11-29T06:49:26.142216Z",
-     "shell.execute_reply": "2024-11-29T06:49:26.141047Z"
+     "iopub.execute_input": "2024-11-30T19:39:25.276445Z",
+     "iopub.status.busy": "2024-11-30T19:39:25.276103Z",
+     "iopub.status.idle": "2024-11-30T19:39:25.709758Z",
+     "shell.execute_reply": "2024-11-30T19:39:25.708661Z"
     },
     "papermill": {
-     "duration": 0.517972,
-     "end_time": "2024-11-29T06:49:26.144572",
+     "duration": 0.439489,
+     "end_time": "2024-11-30T19:39:25.711898",
      "exception": false,
-     "start_time": "2024-11-29T06:49:25.626600",
+     "start_time": "2024-11-30T19:39:25.272409",
      "status": "completed"
     },
     "tags": []
@@ -281,7 +290,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.15394</td></tr><tr><td>233235</td><td>-0.169385</td></tr><tr><td>233236</td><td>0.000275</td></tr></tbody></table></div>"
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.130797</td></tr><tr><td>233235</td><td>-0.186137</td></tr><tr><td>233236</td><td>0.009529</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3, 2)\n",
@@ -290,9 +299,9 @@
        "│ ---    ┆ ---            │\n",
        "│ i64    ┆ f64            │\n",
        "╞════════╪════════════════╡\n",
-       "│ 233234 ┆ 0.15394        │\n",
-       "│ 233235 ┆ -0.169385      │\n",
-       "│ 233236 ┆ 0.000275       │\n",
+       "│ 233234 ┆ 0.130797       │\n",
+       "│ 233235 ┆ -0.186137      │\n",
+       "│ 233236 ┆ 0.009529       │\n",
        "└────────┴────────────────┘"
       ]
      },
@@ -310,13 +319,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d99e1603",
+   "id": "886bc49f",
    "metadata": {
     "papermill": {
-     "duration": 0.003267,
-     "end_time": "2024-11-29T06:49:26.150991",
+     "duration": 0.002557,
+     "end_time": "2024-11-30T19:39:25.717391",
      "exception": false,
-     "start_time": "2024-11-29T06:49:26.147724",
+     "start_time": "2024-11-30T19:39:25.714834",
      "status": "completed"
     },
     "tags": []
@@ -329,19 +338,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "86f7ffc5",
+   "id": "a58abb64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:49:26.158840Z",
-     "iopub.status.busy": "2024-11-29T06:49:26.158441Z",
-     "iopub.status.idle": "2024-11-29T06:49:26.633273Z",
-     "shell.execute_reply": "2024-11-29T06:49:26.632245Z"
+     "iopub.execute_input": "2024-11-30T19:39:25.724280Z",
+     "iopub.status.busy": "2024-11-30T19:39:25.723846Z",
+     "iopub.status.idle": "2024-11-30T19:39:26.230194Z",
+     "shell.execute_reply": "2024-11-30T19:39:26.229044Z"
     },
     "papermill": {
-     "duration": 0.481839,
-     "end_time": "2024-11-29T06:49:26.635900",
+     "duration": 0.512458,
+     "end_time": "2024-11-30T19:39:26.232507",
      "exception": false,
-     "start_time": "2024-11-29T06:49:26.154061",
+     "start_time": "2024-11-30T19:39:25.720049",
      "status": "completed"
     },
     "tags": []
@@ -363,13 +372,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6455cd7f",
+   "id": "2cb631aa",
    "metadata": {
     "papermill": {
-     "duration": 0.002743,
-     "end_time": "2024-11-29T06:49:26.642076",
+     "duration": 0.002537,
+     "end_time": "2024-11-30T19:39:26.238187",
      "exception": false,
-     "start_time": "2024-11-29T06:49:26.639333",
+     "start_time": "2024-11-30T19:39:26.235650",
      "status": "completed"
     },
     "tags": []
@@ -390,7 +399,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 10047072,
+     "sourceId": 10060897,
      "sourceType": "datasetVersion"
     }
    ],
@@ -419,14 +428,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.289995,
-   "end_time": "2024-11-29T06:49:27.670587",
+   "duration": 17.925108,
+   "end_time": "2024-11-30T19:39:26.960363",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-29T06:49:12.380592",
+   "start_time": "2024-11-30T19:39:09.035255",
    "version": "2.6.0"
   }
  },
