Kaggle Notebook | mcts-nn-1dcnn | Version 6

--- a/kaggle/mcts-nn-1dcnn.ipynb
+++ b/kaggle/mcts-nn-1dcnn.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "39816789",
+   "id": "e74c6d6b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:58:04.493925Z",
-     "iopub.status.busy": "2024-11-29T06:58:04.493350Z",
-     "iopub.status.idle": "2024-11-29T06:58:49.123563Z",
-     "shell.execute_reply": "2024-11-29T06:58:49.122006Z"
+     "iopub.execute_input": "2024-12-01T17:56:50.731892Z",
+     "iopub.status.busy": "2024-12-01T17:56:50.731364Z",
+     "iopub.status.idle": "2024-12-01T17:57:36.375027Z",
+     "shell.execute_reply": "2024-12-01T17:57:36.373673Z"
     },
     "papermill": {
-     "duration": 44.641843,
-     "end_time": "2024-11-29T06:58:49.129530",
+     "duration": 45.655032,
+     "end_time": "2024-12-01T17:57:36.380491",
      "exception": false,
-     "start_time": "2024-11-29T06:58:04.487687",
+     "start_time": "2024-12-01T17:56:50.725459",
      "status": "completed"
     },
     "tags": []
@@ -36,21 +36,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1aa9cc4c",
+   "id": "15e7a1dd",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:58:49.138560Z",
-     "iopub.status.busy": "2024-11-29T06:58:49.138092Z",
-     "iopub.status.idle": "2024-11-29T06:58:59.723757Z",
-     "shell.execute_reply": "2024-11-29T06:58:59.722494Z"
+     "iopub.execute_input": "2024-12-01T17:57:36.389847Z",
+     "iopub.status.busy": "2024-12-01T17:57:36.389422Z",
+     "iopub.status.idle": "2024-12-01T17:57:47.334974Z",
+     "shell.execute_reply": "2024-12-01T17:57:47.334016Z"
     },
     "papermill": {
-     "duration": 10.593217,
-     "end_time": "2024-11-29T06:58:59.726258",
+     "duration": 10.95297,
+     "end_time": "2024-12-01T17:57:47.337527",
      "exception": false,
-     "start_time": "2024-11-29T06:58:49.133041",
+     "start_time": "2024-12-01T17:57:36.384557",
      "status": "completed"
     },
     "tags": []
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3dcbbd2",
+   "id": "ab9149ea",
    "metadata": {
     "papermill": {
-     "duration": 0.003446,
-     "end_time": "2024-11-29T06:58:59.733334",
+     "duration": 0.003251,
+     "end_time": "2024-12-01T17:57:47.344366",
      "exception": false,
-     "start_time": "2024-11-29T06:58:59.729888",
+     "start_time": "2024-12-01T17:57:47.341115",
      "status": "completed"
     },
     "tags": []
@@ -112,19 +112,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c2216f5",
+   "id": "25c19b6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:58:59.742603Z",
-     "iopub.status.busy": "2024-11-29T06:58:59.741289Z",
-     "iopub.status.idle": "2024-11-29T06:59:02.415013Z",
-     "shell.execute_reply": "2024-11-29T06:59:02.413947Z"
+     "iopub.execute_input": "2024-12-01T17:57:47.353396Z",
+     "iopub.status.busy": "2024-12-01T17:57:47.352775Z",
+     "iopub.status.idle": "2024-12-01T17:57:50.123457Z",
+     "shell.execute_reply": "2024-12-01T17:57:50.122194Z"
     },
     "papermill": {
-     "duration": 2.680507,
-     "end_time": "2024-11-29T06:59:02.417198",
+     "duration": 2.778191,
+     "end_time": "2024-12-01T17:57:50.125814",
      "exception": false,
-     "start_time": "2024-11-29T06:58:59.736691",
+     "start_time": "2024-12-01T17:57:47.347623",
      "status": "completed"
     },
     "tags": []
@@ -155,7 +155,12 @@
    ],
    "source": [
     "# Specify the path where you want to save the serialized function\n",
-    "nn_1dcnn_artifacts_path = '/kaggle/input/mcts-artifacts/nn-1dcnn_predict_uni95.pt'\n",
+    "# nn_1dcnn_artifacts_path = '/kaggle/input/mcts-artifacts/nn-1dcnn_predict_uni95.pt'\n",
+    "\n",
+    "nn_1dcnn_artifacts_path = '/kaggle/input/mcts-artifacts/nn-1dcnn_predict_fsv24.pt'\n",
+    "# nn_1dcnn_artifacts_path = '/kaggle/input/mcts-artifacts/nn-1dcnn_predict_full.pt'\n",
+    "# nn_1dcnn_artifacts_path = '/kaggle/input/mcts-artifacts/nn-1dcnn_predict_uni80.pt'\n",
+    "# nn_1dcnn_artifacts_path = '/kaggle/input/mcts-artifacts/nn-1dcnn_predict_uni90.pt'\n",
     "\n",
     "# Load the function from the file\n",
     "nn_1dcnn_artifacts = torch.load(nn_1dcnn_artifacts_path, weights_only=False)\n",
@@ -166,19 +171,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "348b2dd1",
+   "id": "843b0864",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:59:02.427009Z",
-     "iopub.status.busy": "2024-11-29T06:59:02.426294Z",
-     "iopub.status.idle": "2024-11-29T06:59:02.453609Z",
-     "shell.execute_reply": "2024-11-29T06:59:02.452556Z"
+     "iopub.execute_input": "2024-12-01T17:57:50.136151Z",
+     "iopub.status.busy": "2024-12-01T17:57:50.135443Z",
+     "iopub.status.idle": "2024-12-01T17:57:50.166011Z",
+     "shell.execute_reply": "2024-12-01T17:57:50.164623Z"
     },
     "papermill": {
-     "duration": 0.035011,
-     "end_time": "2024-11-29T06:59:02.455837",
+     "duration": 0.038971,
+     "end_time": "2024-12-01T17:57:50.168569",
      "exception": false,
-     "start_time": "2024-11-29T06:59:02.420826",
+     "start_time": "2024-12-01T17:57:50.129598",
      "status": "completed"
     },
     "tags": []
@@ -423,19 +428,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e67f24cd",
+   "id": "d703027c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:59:02.465255Z",
-     "iopub.status.busy": "2024-11-29T06:59:02.464869Z",
-     "iopub.status.idle": "2024-11-29T06:59:03.134792Z",
-     "shell.execute_reply": "2024-11-29T06:59:03.133688Z"
+     "iopub.execute_input": "2024-12-01T17:57:50.177926Z",
+     "iopub.status.busy": "2024-12-01T17:57:50.177534Z",
+     "iopub.status.idle": "2024-12-01T17:57:50.770498Z",
+     "shell.execute_reply": "2024-12-01T17:57:50.769378Z"
     },
     "papermill": {
-     "duration": 0.677511,
-     "end_time": "2024-11-29T06:59:03.137076",
+     "duration": 0.601296,
+     "end_time": "2024-12-01T17:57:50.773730",
      "exception": false,
-     "start_time": "2024-11-29T06:59:02.459565",
+     "start_time": "2024-12-01T17:57:50.172434",
      "status": "completed"
     },
     "tags": []
@@ -453,8 +458,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 396\n",
-      "len(categorical_cols): 10\n"
+      "len(numerical_cols): 147\n",
+      "len(categorical_cols): 8\n"
      ]
     }
    ],
@@ -593,19 +598,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9226eb04",
+   "id": "26fe7589",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:59:03.148191Z",
-     "iopub.status.busy": "2024-11-29T06:59:03.147292Z",
-     "iopub.status.idle": "2024-11-29T06:59:05.353230Z",
-     "shell.execute_reply": "2024-11-29T06:59:05.352035Z"
+     "iopub.execute_input": "2024-12-01T17:57:50.789229Z",
+     "iopub.status.busy": "2024-12-01T17:57:50.788334Z",
+     "iopub.status.idle": "2024-12-01T17:57:51.962715Z",
+     "shell.execute_reply": "2024-12-01T17:57:51.961502Z"
     },
     "papermill": {
-     "duration": 2.213824,
-     "end_time": "2024-11-29T06:59:05.355523",
+     "duration": 1.185047,
+     "end_time": "2024-12-01T17:57:51.965340",
      "exception": false,
-     "start_time": "2024-11-29T06:59:03.141699",
+     "start_time": "2024-12-01T17:57:50.780293",
      "status": "completed"
     },
     "tags": []
@@ -621,7 +626,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.162618</td></tr><tr><td>233235</td><td>-0.208374</td></tr><tr><td>233236</td><td>0.02826</td></tr></tbody></table></div>"
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.132252</td></tr><tr><td>233235</td><td>-0.169436</td></tr><tr><td>233236</td><td>-0.017543</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3, 2)\n",
@@ -630,9 +635,9 @@
        "│ ---    ┆ ---            │\n",
        "│ i64    ┆ f64            │\n",
        "╞════════╪════════════════╡\n",
-       "│ 233234 ┆ 0.162618       │\n",
-       "│ 233235 ┆ -0.208374      │\n",
-       "│ 233236 ┆ 0.02826        │\n",
+       "│ 233234 ┆ 0.132252       │\n",
+       "│ 233235 ┆ -0.169436      │\n",
+       "│ 233236 ┆ -0.017543      │\n",
        "└────────┴────────────────┘"
       ]
      },
@@ -651,19 +656,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ac5f7218",
+   "id": "d79e6ecd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:59:05.366269Z",
-     "iopub.status.busy": "2024-11-29T06:59:05.365327Z",
-     "iopub.status.idle": "2024-11-29T06:59:05.369977Z",
-     "shell.execute_reply": "2024-11-29T06:59:05.369018Z"
+     "iopub.execute_input": "2024-12-01T17:57:51.975805Z",
+     "iopub.status.busy": "2024-12-01T17:57:51.975421Z",
+     "iopub.status.idle": "2024-12-01T17:57:51.980294Z",
+     "shell.execute_reply": "2024-12-01T17:57:51.979281Z"
     },
     "papermill": {
-     "duration": 0.012376,
-     "end_time": "2024-11-29T06:59:05.372033",
+     "duration": 0.012871,
+     "end_time": "2024-12-01T17:57:51.982459",
      "exception": false,
-     "start_time": "2024-11-29T06:59:05.359657",
+     "start_time": "2024-12-01T17:57:51.969588",
      "status": "completed"
     },
     "tags": []
@@ -681,13 +686,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f45252c",
+   "id": "09e59d4e",
    "metadata": {
     "papermill": {
-     "duration": 0.003709,
-     "end_time": "2024-11-29T06:59:05.379854",
+     "duration": 0.003587,
+     "end_time": "2024-12-01T17:57:51.990024",
      "exception": false,
-     "start_time": "2024-11-29T06:59:05.376145",
+     "start_time": "2024-12-01T17:57:51.986437",
      "status": "completed"
     },
     "tags": []
@@ -700,19 +705,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9e68d448",
+   "id": "a5e48dda",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T06:59:05.389567Z",
-     "iopub.status.busy": "2024-11-29T06:59:05.389148Z",
-     "iopub.status.idle": "2024-11-29T06:59:07.406659Z",
-     "shell.execute_reply": "2024-11-29T06:59:07.405488Z"
+     "iopub.execute_input": "2024-12-01T17:57:51.999174Z",
+     "iopub.status.busy": "2024-12-01T17:57:51.998772Z",
+     "iopub.status.idle": "2024-12-01T17:57:52.977547Z",
+     "shell.execute_reply": "2024-12-01T17:57:52.976140Z"
     },
     "papermill": {
-     "duration": 2.025271,
-     "end_time": "2024-11-29T06:59:07.409101",
+     "duration": 0.986475,
+     "end_time": "2024-12-01T17:57:52.980256",
      "exception": false,
-     "start_time": "2024-11-29T06:59:05.383830",
+     "start_time": "2024-12-01T17:57:51.993781",
      "status": "completed"
     },
     "tags": []
@@ -734,13 +739,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57f9132",
+   "id": "e839edf0",
    "metadata": {
     "papermill": {
-     "duration": 0.003855,
-     "end_time": "2024-11-29T06:59:07.418160",
+     "duration": 0.003642,
+     "end_time": "2024-12-01T17:57:52.988984",
      "exception": false,
-     "start_time": "2024-11-29T06:59:07.414305",
+     "start_time": "2024-12-01T17:57:52.985342",
      "status": "completed"
     },
     "tags": []
@@ -766,7 +771,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 10047072,
+     "sourceId": 10069686,
      "sourceType": "datasetVersion"
     }
    ],
@@ -795,14 +800,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 68.509193,
-   "end_time": "2024-11-29T06:59:10.165155",
+   "duration": 67.499282,
+   "end_time": "2024-12-01T17:57:54.819844",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-29T06:58:01.655962",
+   "start_time": "2024-12-01T17:56:47.320562",
    "version": "2.6.0"
   }
  },
